# Analyzr

./: .gitignore
backend/: analysis.py  log.txt  main.py  pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/services/: analysis_service.py  gemini_service.py  llm_service.py
frontend/: package-lock.json
frontend/src/: index.css
frontend/src/components/: Navbar.jsx  UploadCard.jsx
frontend/src/pages/: Dashboard.jsx
